--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -11,5 +11,6 @@
 @import "section/style-team.scss";
 @import "section/style-menu.scss";
 @import "section/style-feedback.scss";
+@import "section/style-order.scss";
 @import "section/style-map.scss"
 
