--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -12,5 +12,6 @@
 @import "section/style-menu.scss";
 @import "section/style-feedback.scss";
 @import "section/style-order.scss";
-@import "section/style-map.scss"
-
+@import "section/style-map.scss";
+// dots
+@import "section/aside.scss";
