--- a/CSS/config/_mixins.scss
+++ b/CSS/config/_mixins.scss
@@ -8,14 +8,17 @@
 
 @mixin btn($bgcolor) {
     background-color: $bgcolor;
+    border: none;
     border-radius: 5px;
     width: 97px;
     height: 35px;
     text-align: center;
     vertical-align: middle;
-    padding-top: 10px;
+    padding: 10px 16px;
     text-transform: uppercase;
     font-family: ubuntumedium;
+    color: #ffffff;
+    line-height: 1;
 }
 
 @mixin circle($width, $color) {
