--- a/CSS/section/style-feedback.scss
+++ b/CSS/section/style-feedback.scss
@@ -4,27 +4,21 @@
 
 .opinion-container {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
+
+
     width: 100%;
     min-width: 1100px;
     height: 100%;
     min-height: 650px;
-}
 
-.opinion {
-    display: flex;
-    width: 100%;
-    min-width: 1100px;
-    height: 50%;
-    min-height: 325px;
 }
-
 
 .opinion__img {
     min-width: 275px;
+    width: 25%;
     min-height: 325px;
+    height: 50%;
     position: relative;
     filter: grayscale(1);
     flex-grow: 1;
@@ -33,6 +27,8 @@
     &_#{$number} {
         background-image: url('../IMG6/#{$number}x2.png');
         background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
         }
 
     &:hover {
