--- a/CSS/section/style-webest.scss
+++ b/CSS/section/style-webest.scss
@@ -48,7 +48,7 @@ background: url(../IMG2/cheese-dip.png) no-repeat left 25px,
 
     
 .bestpoint__img {
-        margin: 0 auto 20px;
+        margin: 0 auto;
 
         &_meat {
         width: 97px;
@@ -82,6 +82,7 @@ background: url(../IMG2/cheese-dip.png) no-repeat left 25px,
         font-family: lifehackmedium;
         font-size: 24px;
         color: #2f3234;
+        line-height: 28px;
 
 }
 
