--- a/CSS/section/style-team.scss
+++ b/CSS/section/style-team.scss
@@ -11,15 +11,15 @@
     height: 100%;
     min-width: 550px;
     width: 50%;
-    margin-left: 50%;
+    margin-left: 52%;
     background-color: rgba(#000000, 0.8);
 }
 
 .teammates {
     position: absolute;
-    top: 90px;
+    top: 65px;
     left: 50%;
-    margin: 0px 80px;
+    margin: 0px 90px;
     bottom: 0;
     right: 0;
 }
@@ -27,27 +27,13 @@
 
 .teammates__title {
     display: block;
-    min-height: 130px;
     @include gagalin(#f9b43b);
     font-weight: 400;
     margin: 0;
+    margin-bottom: 46px;
     vertical-align: middle;
 
-    // margin-top: 90px;
-    // padding-left: 80px;
 }
-
-// .teammates__heading {
-//     min-height: 45px;
-//     display: flex;
-//     align-items: center;
-// }
-
-// // .teammates__icon {
-// //     margin-right: 10px;
-// //     height: 9px;
-// //     width: 12px;
-// // }
 
 .teammates__name {
     margin: 0;
@@ -56,9 +42,10 @@
     font-size: 14px;
     font-weight: 400;
     color: #ffffff;
-    min-height: 45px;
+
     display: flex;
     align-items: center;
+    padding: 15px 0px;
 
     &:before {
         content: "";
@@ -78,21 +65,21 @@
 }
 
 .teammates__foto {
-    width: 40%;
-    height: 40%;
-    min-width: 105px;
-    min-height: 105px;
-    padding: 10px;
+    width: 25%;
+    height: 25%;
+    min-width: 100px;
+    min-height: 100px;
+    margin-left: 15px;
+
 }
 
 .teammates__text {
-    width: 60%;
-    min-width: 210px;
+    width: 66%;
     color: #ffffff;
     font-size: 14px;
     line-height: 24px;
     font-family: ubuntulight;
-    padding: 10px 20px;
+    padding: 0px 20px;
 }
 
 .teammates__job {
@@ -102,7 +89,7 @@
 }
 
 .teammates__trigger_active {
-    .teammates__icon {
+    .teammates__name:before {
         transform: scale(1, -1);
     }
 
@@ -112,7 +99,7 @@
 
     +.teammates__desc {
         height: 23%;
-        min-height: 150px;
+        min-height: 120px;
         overflow: visible;
     }
 }
